<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".views.fragments.mainFragment.CommunitiesFragment">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView"
        android:layout_width="180dp"
        android:layout_height="180dp"
        app:cardElevation="10dp"
        app:cardBackgroundColor="@android:color/holo_purple"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toStartOf="@+id/materialCardView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/materialCardView4"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/lost_and_found"
            android:textColor="@android:color/black"
            android:textSize="25sp" />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView2"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:cardElevation="10dp"
        app:cardBackgroundColor="@android:color/holo_blue_light"
        app:cardCornerRadius="10dp"
        app:layout_constraintStart_toEndOf="@id/materialCardView"
        app:layout_constraintBottom_toBottomOf="@+id/materialCardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/materialCardView">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/organize_events"
            android:textColor="@android:color/black"
            android:textSize="25sp" />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView4"
        android:layout_width="180dp"
        android:layout_height="180dp"
        app:cardElevation="10dp"
        app:cardBackgroundColor="@android:color/holo_orange_dark"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/materialCardView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/materialCardView3"
        app:layout_constraintTop_toTopOf="@+id/materialCardView3">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/organize_meetups"
            android:textColor="@android:color/black"
            android:textSize="25sp" />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView3"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginBottom="16dp"
        app:cardElevation="10dp"
        app:cardBackgroundColor="@android:color/holo_orange_light"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/materialCardView4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialCardView">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/residents"
            android:textColor="@android:color/black"
            android:textSize="25sp" />

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>