<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".views.fragments.mainFragment.ShareToNgoFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvDonate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_the_items_to_donate"
            android:padding="5dp"
            android:layout_margin="10dp"
            android:textAppearance="?attr/textAppearanceHeadline6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/etDonateList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:layout_margin="10dp"
            android:textAppearance="?attr/textAppearanceBody1"
            android:background="@android:color/transparent"
            android:hint="@string/enter_list_items_with_quantity"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDonate"
            android:importantForAutofill="no"
            android:inputType="textMultiLine" />

        <TextView
            android:id="@+id/chooseNgo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="5dp"
            android:layout_margin="10dp"
            android:padding="5dp"
            android:text="Add NGO"
            android:textAppearance="?attr/textAppearanceHeadline6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etDonateList"
            app:drawableEndCompat="@drawable/ic_round_arrow_drop_down_circle_24" />

        <EditText
            android:id="@+id/etNgoList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:layout_margin="10dp"
            android:textAppearance="?attr/textAppearanceBody1"
            android:background="@android:color/transparent"
            android:hint="@string/enter_the_ngo_you_want_to_donate_to"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/chooseNgo"
            android:importantForAutofill="no"
            android:inputType="textMultiLine" />

        <ImageView
            android:id="@+id/imageNgo"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            app:layout_constraintDimensionRatio="1:1"
            android:src="@android:color/darker_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etNgoList" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/addImageBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="Add Image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageNgo" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/confirmNgoPost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="Confirm"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageNgo" />

        <ProgressBar
            android:id="@+id/progressBarNgo"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/imageNgo"
            app:layout_constraintEnd_toEndOf="@+id/imageNgo"
            app:layout_constraintStart_toStartOf="@+id/imageNgo"
            app:layout_constraintTop_toTopOf="@id/imageNgo" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>